# SaglykNobaty

./: README.md  main.py  pyproject.toml
health_time/: application.py  config.py
health_time/appointment_app/: __init__.py
health_time/appointment_app/models/: appointment_model.py  city_model.py  department_model.py  hospital_model.py  speciality_model.py
health_time/appointment_app/routers/: appointment_router.py  city_router.py  department_router.py  hospital_router.py  specialty_router.py
health_time/auth/: __init__.py  auth.py  dependecies.py  jwt.py
health_time/auth/models/: role_model.py  user_model.py
health_time/auth/routers/: auth_router.py  role_router.py  user_router.py
health_time/core/: database.py  queries.py
health_time/core/storage/: appointment_storage.py  city_storage.py  department_storage.py  hospital_storage.py  role_storage.py  specialty_storage.py  storage.py  user_storage.py
health_time/doctor_cabinet_app/: __init__.py
health_time/doctor_cabinet_app/routers/: patient_appointment.py
health_time/patient_cabinet_app/: __init__.py
health_time/patient_cabinet_app/routers/: doctor_appointment.py
